[gd_scene load_steps=3 format=3 uid="uid://c3a0vucsflsiv"]

[ext_resource type="Script" path="res://lobby_scene/lobby.gd" id="1_wrg1q"]
[ext_resource type="Theme" uid="uid://bhundlasnejpw" path="res://h1_text.tres" id="1_yl782"]

[node name="Lobby" type="Node2D"]
script = ExtResource("1_wrg1q")

[node name="LabelIP" type="RichTextLabel" parent="."]
offset_left = 629.0
offset_top = 384.0
offset_right = 811.0
offset_bottom = 468.0
theme = ExtResource("1_yl782")
text = "IP:"

[node name="join_btn" type="Button" parent="."]
offset_left = 853.0
offset_top = 506.0
offset_right = 1123.0
offset_bottom = 593.0
theme = ExtResource("1_yl782")
text = "JOIN"

[node name="EditTextIP" type="LineEdit" parent="."]
offset_left = 802.0
offset_top = 374.0
offset_right = 1259.0
offset_bottom = 451.0
theme = ExtResource("1_yl782")
placeholder_text = "Add IP:port here"

[node name="LabelIP" type="RichTextLabel" parent="EditTextIP"]
layout_mode = 0
offset_left = -175.0
offset_top = -83.0
offset_right = 5.0
offset_bottom = 1.0
theme = ExtResource("1_yl782")
text = "Login:"

[node name="EditTextLogin" type="LineEdit" parent="."]
offset_left = 804.0
offset_top = 287.0
offset_right = 1261.0
offset_bottom = 364.0
theme = ExtResource("1_yl782")
placeholder_text = "Add login here"

[connection signal="pressed" from="join_btn" to="." method="_on_join_pressed"]
